fixed l-container layout problem

--- a/src/styles/3-generic/_layout.scss
+++ b/src/styles/3-generic/_layout.scss
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: stretch;
-    align-items: flex-start;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 //general wrapper
@@ -12,9 +12,6 @@
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
-    height: 200px;
-
-
 
     border: 5px solid green;
     @include mq(1120px) {
